--- a/src/css/base.css
+++ b/src/css/base.css
@@ -18,7 +18,7 @@ body {
 	--color-text: #000;
 	--color-text-alt: #1D0460;
 	--color-text-slide: #53dbf1;
-	--color-bg: #4000EA;
+	--color-bg: #000;
 	--color-link: #000;
 	--color-link-hover: #f33ba5;
 	--page-padding: 25px;
@@ -135,75 +135,22 @@ a:focus-visible {
 	display: none;
 }
 
-.vector--circle {
-	width: 44%;
-	left: 28%;
-	top: -50%;
-}
-
-.intro {
-	padding: var(--page-padding);
-}
-
-.intro__title {
-	margin: 0 0 2rem;
-	font-size: 1rem;
-	font-weight: 600;
-}
-
-.intro__description {
-	line-height: 1.2;
-	color: var(--color-text-alt);
-}
 
 .menu {
+	position: fixed;
+	width: 100%;
 	display: flex;
-	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
 	padding: var(--page-padding);
-	justify-self: end;
-	line-height: 1.3;
+	z-index: 99999;
+	
 }
 
 .menu__item {
 	text-decoration: none;
 }
 
-.author {
-	grid-area: 2 ​/ 1 / 4 / 2;
-	align-self: center;
-	padding-left: var(--page-padding);
-}
-
-.title {
-	line-height: 1;
-	font-size: clamp(1.75rem,3vw,15rem);
-	white-space: nowrap;
-	margin: 0;
-	padding: var(--page-padding);
-	justify-self: center;
-}
-
-.showreel {
-	display: flex;
-	align-items: center;
-	grid-area: 4 / 3 / 5 / 4;
-	align-self: center;
-	justify-self: end;
-	padding: var(--page-padding);
-	text-decoration: none;
-	color: var(--color-link-hover);
-}
-
-.showreel::before {
-	content: '\00B7';
-	font-size: 5rem;
-	line-height: 0;
-	margin: 0 0.25rem 0.25rem 0;
-}
-
-.showreel:hover::before {
-	animation: pulse 0.8s infinite alternate linear;
-}
 
 @keyframes pulse {
 	to {
@@ -212,7 +159,7 @@ a:focus-visible {
 }
 
 .slideshow {
-	height: 100vw;
+	height: 100vh;
 	position: relative;
 	display: grid;
 	grid-template-columns: 60px minmax(200px, 70%) 60px;
@@ -259,8 +206,7 @@ a:focus-visible {
 	height: 100%;
 	overflow: hidden;
 	position: relative;
-	margin-top: auto;
-	border-radius: 35vw 35vw 0 0;
+	margin-top: 50px;
 	justify-self: center;
 }
 
@@ -354,66 +300,4 @@ a:focus-visible {
 	pointer-events: auto;
 	opacity: 1;
 	z-index: 1000;
-}
-
-@media screen and (min-width: 53em) {
-	body {
-		overflow: hidden;
-	}
-	.vector {
-		display: block;
-	}
-	main {
-		display: grid;
-		width: 100%;
-		height: 100%;
-		grid-template-columns: 28.05% 43.9% 28.05%;
-		grid-template-rows: 25% 1fr 29.5% 8.5%;
-		position: relative;
-	}
-	.title {
-		grid-area: 1 / 2 / 2 / 3;
-	}
-	.menu {
-		grid-area: 1 / 3 / 2 / 4;
-	}
-	.intro {
-		grid-area: 1 / 1 / 3 / 2;
-	}
-	.intro__description {
-		max-width: 20ch;
-	}
-	.gallery {
-		border-radius: 25vw 25vw 0 0;
-		width: 100%;
-	}
-	.slideshow {
-		height: auto;
-    	grid-area: 2 / 2 / 5 / 3;
-    	grid-template-columns: 4rem 43.8vw 4rem;
-    	grid-template-rows: 38% 20% 42%;
-    	margin-left: -4rem;
-    	grid-template-areas: '... img title'
-						'nav-prev img nav-next'
-						'... img ...';
-		justify-content: start;
-    }
-    .meta {
-    	margin: 3rem 0 0 1rem;
-    	text-align: left;
-    	justify-self: start;
-    }
-    .nav {
-    	align-self: start;
-    }
-    .nav__text {
-    	display: block;
-    }
-    .nav--prev {
-		padding-right: 1.5rem;
-	}
-
-	.nav--next {
-		padding-left: 1.5rem;
-	}
 }
