--- a/src/css/base.css
+++ b/src/css/base.css
@@ -48,16 +48,15 @@ section.fords-flash-carousel {
 	-moz-osx-font-smoothing: grayscale;
 	will-change: background-color;
 	/* margin-top: 200px; */
-	padding: 60px 0;
 	overflow: hidden;
 }
 
 .wrapper {
 	position: relative;
-	max-width: 1450px;
+	max-width: 1200px;
 	margin: 0 auto;
-	height: 100%;
 	padding: 0 37px;
+	height: 100%;
 }
 
 .unbutton {
@@ -92,6 +91,12 @@ section.fords-flash-carousel {
 	
 }
 
+.logo {
+	@media (max-width: 768px) {
+		display: none;
+	}
+}
+
 .menu__item {
 	text-decoration: none;
 }
@@ -108,18 +113,25 @@ section.fords-flash-carousel {
 	width: 100%;
 	height: 100%;
 	z-index: 1001;
-	padding-top: 200px;
-	background: #0000005d;
+	padding-top: 250px;
+	/* background: #0000005d; */
 }
 
 .slide__content {
-	position: absolute;
+	position: relative;
 	bottom: 0;
 	width: 100%;
 	z-index: 1001;
 	display: flex;
-	justify-content: space-between;
-	padding: 20px;
+	flex-direction: column;
+	justify-content: start;
+	padding-bottom: 100px;
+
+	@media (min-width: 768px) {
+		justify-content: space-between;
+		flex-direction: row;
+	}
+
 }
 
 .slide__info {
@@ -129,15 +141,73 @@ section.fords-flash-carousel {
 
 	h4 {
 		margin-top: 0;
+		margin-bottom: 20px;
+		font-family: 'roobert', sans-serif;
+		font-size: clamp(22px, 5vw, 26px);
+		font-weight: 300;
+	}
+
+	p {
+		font-family: 'roobert', sans-serif;
+		font-weight: 300;
+		font-size: 17px;
+		line-height: 25.5px;
 	}
 }
 
+.slide__info-content {
+	opacity: 0;
+	display: none;
+}
+
 .meta {
-	
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.meta__wrap {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .meta__nav {
 	display: flex;
+	flex-direction: column;
+	align-items: start;
+	padding-bottom: 25px;
+
+	@media (min-width: 768px) {
+		flex-direction: row;
+		align-items: center;
+	}
+}
+
+.nav__buttons {
+	display: flex;
+
+	@media (max-width: 768px) {
+		padding-bottom: 20px;
+	}
+}
+
+.progress__bar {
+	position: relative;
+	margin-left: 0px;
+
+	@media (min-width: 768px) {
+		margin-left: 30px;
+	}
+}
+
+.bar {
+	position: relative;
+	display: block;
+	height: 1px;
+	width: 250px;
+	background: rgba(255, 255, 255, .2);
 }
 
 .meta__nav__prev {
@@ -178,18 +248,38 @@ section.fords-flash-carousel {
 	color: var(--color-text-slide);
 	display: grid;
 	pointer-events: none;
+
 }
 
 .meta__content-title {
+	position: relative;
 	font-family: 'roobert', sans-serif;
 	font-size: clamp(40px, 10vw, 167px);
-	line-height: .9em;
+	line-height: .75em;
 	letter-spacing: -2px;
 	color: #FFFFFF;
 	opacity: 0;
 	display: none;
 	will-change: opacity, transform;
 	word-wrap: break-word;
+}
+
+.number {
+	position: absolute;
+	left: -15px;
+	vertical-align: top;
+	line-height: 1.8;
+	font-size: 20px;
+}
+
+
+
+.new__line__title {
+	padding-left: 10%;
+}
+
+.new__line__title > span {
+	font-size: clamp(40px, 5vw, 84px);
 }
 
 .gallery {
@@ -218,7 +308,7 @@ section.fords-flash-carousel {
 	width: 100%;
 	height: 100%;
 	background-size: cover;
-	background-position: 50% 50%;
+	background-position: center center;
 	will-change: filter, transform;
 }
 
