top align title text

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -293,6 +293,10 @@ section.fords-flash-carousel {
 }
 
 .new__line__title > span {
+	vertical-align: top;
+}
+
+.new__line__title > span {
 	font-size: clamp(40px, 5vw, 84px);
 }
 
